examples/test/testpolicy3526.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3526
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key22: value14
      key41: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value14
          key45: value34
          key5: value3
      podSelector:
        matchLabels:
          key17: value47
